--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Deon Remzi Counselling</title>
     <link rel="stylesheet" href="./src/index.css" />
   </head>
-  <body class="bg-alabaster min-h-screen ">
+  <body class="bg-main min-h-screen ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
