added google analytics capacity

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=home"
     />
-    <link rel="icon" type="image/svg+xml" href="/DR_Logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Logo_DR.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -20,6 +20,19 @@
     />
     <title>Deon Remzi Counselling</title>
     <link rel="stylesheet" href="./src/index.css" />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-QMY174ZHGS"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-QMY174ZHGS", { send_page_view: false });
+    </script>
   </head>
   <body class="bg-main">
     <div id="root"></div>
